--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@near-wallet-selector/core": "^8.9.8",
     "@near-wallet-selector/modal-ui": "^8.9.8",
     "@near-wallet-selector/my-near-wallet": "^8.9.8",
+    "@ref-finance/ref-sdk": "^1.3.8",
     "axios": "^1.7.2",
     "bn.js": "^5.2.1",
     "near-api-js": "^4.0.2",
