--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@near-wallet-selector/core": "^8.9.8",
+    "@near-wallet-selector/meteor-wallet": "^8.9.10",
     "@near-wallet-selector/modal-ui": "^8.9.8",
     "@near-wallet-selector/my-near-wallet": "^8.9.10",
     "@near-wallet-selector/sender": "^8.9.10",
